arrumando formatação de data e texto e arrumando alertas